dev application profile introduced